@@ -19,63 +19,120 @@
 // GNUlibc includes
 #include <stdlib.h>
 #include <string.h>
+#include <stdio.h>
+
+//GNOMElib
+#include <glib.h>
+
 
 // great stuff
 #include "libotp.h"
 
 // ----------------- Lib One-Time Pad Functions ------------------
+char** otp_getpad(int *size);
 
-/* decrypt the message  */
-static int OTP_decrypt(char **message) {
-	// TODO: many many checks!
+/* Encodes message into the base64 form */
+int otp_b64enc(char **message, int *size) {
+	//printf("b64enc:\t\tMessage:\t%s\n",*message);
+	//printf("pointer:\t\t\t%u\n",size);
 
-	printf(message);
-	printf("received a message!!! we should decrypt it :)\n");
+	guchar *gumsg = (guchar *) malloc( *size * sizeof(guchar) );
+	memcpy(gumsg,*message,*size);
 
-	return 0; 
+	gchar *gmsg = g_base64_encode(gumsg,*size);
+
+	//g_print("b64enc:\t\tb64:\t\t%s\n",gmsg);
+	//printf("b64enc:\t\tMessage:\t%d\n",strlen(gmsg));
+
+	*size = strlen(gmsg) + 1;
+	char *msg = (char *) malloc( *size * sizeof(char) );
+	strcpy(msg,gmsg);
+	free(*message);
+	*message = msg;
+	//printf("b64enc:\t\tMessage:\t%s\n",*message);
+	return 0;
 }
 
-/* encrypt the message  */
-static int OTP_encrypt(char **message) {
-	// TODO: many many checks!
+/* Decodes message from the base64 form */
+int otp_b64dec(char **message, int *size) {
+	//printf("b64dec:\t\tMessage:\t%s\n",*message);
+	//printf("pointer:\t\t\t%u\n",size);
 
-	aaaa_encrypt(message);
+	gchar *gmsg = (gchar *) malloc( *size * sizeof(gchar) );
+	memcpy(gmsg,*message,*size);
 
-	// debug
-	printf("we want to send a message!!! we should encrypt it :)\n");
+	guchar *gumsg = g_base64_decode(gmsg,size);
 
+	//g_print("b64dec:\t\tb64:\t\t%s\n",gumsg);
+
+	char *msg = (char *) malloc( *size * sizeof(char) );
+	strcpy(msg,gumsg);
+	free(*message);
+	*message = msg;
+	//printf("b64dec:\t\tMessage:\t%s\n",*message);
+	return 0;
+}
+
+/* Decrypt the message  */
+int otp_udecrypt(char **message) {
+	int a=0; int *size=&a;
+	*size=strlen(*message)+1;				/* get length */
+
+	printf("udecrypt:\tSize:\t\t%d\n",*size);
+	//printf("udecrypt:\tMessage:\t%s\n",*message);
+
+	otp_b64dec( message, size );				/* decode base64 */
+	printf("udecrypt:\tSize:\t\t%d\n",*size);
+	char **pad=otp_getpad( size );				/* get pad */
+	//printf("udecrypt:\tMessage:\t%s\n",*message);
+	otp_xor( *message, *pad, *size );			/* xor */
+	//printf("udecrypt:\tMessage:\t%s\n",*message);
 	return 0;
 }
 
 
-/* xor message and pad and return the result in message 
-The function needs the message and the pad to have the same size.*/
-int otp_xor(char **message,char **pad) {
-	char *m,*p;
+/* Encrypt the message  */
+int otp_uencrypt(char **message) {
+	int a=0; int *size=&a;
+	*size=strlen(*message) + 1;				/* get length */
+
+	printf("uencrypt:\tSize:\t\t%d\n",*size);
+	//printf("uencrypt:\tMessage:\t%s\n",*message);
+
+	char **pad=otp_getpad( size );				/* get pad */
+	//printf("Pad\t:%s\n",*ppad);
+	otp_xor( *message , *pad, *size );			/* xor */
+	//printf("uencrypt:\tMessage:\t%s\n",*message);
+	otp_b64enc( message , size );				/* encode base64 */
+	return 0;
+}
+/* Creates a pointer to a char-array with the pad */
+char** otp_getpad(int *size) {
+	char **pad;
+	printf("xor:\t\tSize:\t\t%d\n",*size);
+	//       "123456789012345"
+	char p[]="980909809809809";  
+	char *vpad = (char *) malloc( (*size) * sizeof(char) );
+	memcpy(vpad,p,*size); //the pad could be anything... use memcyp
+	pad=&vpad;
+	//printf("getpad:\t\tPad:\t\t%s\n",*pad);
+	return pad;
+}
+
+
+/* xor message and pad  */
+int otp_xor(char *m,char *p,int len) {
 	int i;
-	int mlen,plen;
-	mlen = strlen(*message);
-	plen = strlen(*pad);
+	
+	//printf("xor:\t\tMessage:\t%s\n",m);
 
-	printf("Length: %d\t%d\n",mlen,plen);  //
-	//Stop if not the same size.
-	if ( mlen != plen) {
-		return 0;
-	}
-
-
-//	presult = malloc((34+1) * sizeof(char));
-//	p = presult;
-
-	m = *message;
-	p = *pad;
-	for (i = 0;i < mlen;i++) {
+	for (i = 0;i < len;i++) {
 		//printf("%c\t%d\t%c\t%d\t%d\n",m[i],m[i],p[i],p[i],m[i]^p[i]); //debug
 		m[i]=m[i]^p[i];
 	}
 	
 	//printf("doing xor :)\n"); //debugm
-	return 1;
+	return 0;
 }
 
 // ----------------- Public One-Time Pad Functions ------------
